objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountEmail__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>AccountEmail</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brand_Image_Link__c</fullName>
        <description>Link to the Brand's Publicly Accessible Image. To be used in email templates</description>
        <label>Brand Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Privacy_Email__c</fullName>
        <description>Email Address for the Brand's Privacy Email Communications</description>
        <label>Brand Privacy Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Brand_Privacy_Form_Link__c</fullName>
        <description>Link to the brand's privacy policy form to submit data access and deletion requests</description>
        <label>Brand Privacy Form Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Privacy_OWA_Name__c</fullName>
        <description>This field is the DisplayName of the Brand's Org Wide Email Address. This value must match *exactly* the DisplayName or privacy emails will not send.</description>
        <label>Brand Privacy OWA Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BulkBuyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BulkBuyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Request_DNM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Request DNM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Loyalty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Loyalty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Account_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loyalty Account Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt In / Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PVHCreatedDate__c</fullName>
        <label>PVHCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PVHLastModifiedDate__c</fullName>
        <label>PVHLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Privacy_Escalation_Email__c</fullName>
        <description>The email address to use when data owner cases need to be escalated</description>
        <label>Privacy Escalation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rate_of_Return__c</fullName>
        <label>Rate of Return (%)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZdProfExtId__c</fullName>
        <externalId>true</externalId>
        <label>ZdProfExtId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Employee</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Id__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Brand_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Brand_Image_Link__c</columns>
        <columns>Brand_Privacy_Email__c</columns>
        <columns>Brand_Privacy_OWA_Name__c</columns>
        <columns>Brand_Privacy_Form_Link__c</columns>
        <columns>Privacy_Escalation_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Brand</value>
        </filters>
        <label>Brand Account</label>
        <sharedTo>
            <role>Tier_I_CSR_Privacy</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Brand</fullName>
        <active>true</active>
        <description>Accounts for Brands</description>
        <label>Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>